namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-probation-estate-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-probation-estate-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "manage_a_workforce_dev"
    cloud-platform.justice.gov.uk/application: "HMPPS Probation Estate"
    cloud-platform.justice.gov.uk/owner: "Manage a Workforce: manage-a-workforce-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-probation-estate"
    cloud-platform.justice.gov.uk/team-name: "manage-a-workforce"
    cloud-platform.justice.gov.uk/review-after: ""
